  * New module: xbt/synchro [Mt]
    synchronization tools (mutex and conditions) working the same way
    in simulation and in real life (mainly useful for GRAS, but not
    only).
  * New module: xbt/queue [Mt]
    classical producer/consumer synchronization scheme
  * xbt_dynar_new_sync() creates a synchronized dynar. All access
    (using the classical functions will get serialized) [Mt]

 SURF:
  * Cleaned many thing in surf and fixed a few bugs [AL].
  * Add a nice command line configuration mechanism to compose models [AL].
  * Add a new model for parallel tasks (ptask_L07) that is less buggy than
    the previous one (KCCFLN05). It relies on something that looks like
    a max-min sharing mechanism but cannot be written as such. A new solver
    was thus designed [AL].
  * Add a new solver to lmm. Based on Lagrange optimization and
    gradient-based descent, it enables to efficiently maximise systems s.a
  
     sum f_i(x_i) s.t Ax<= b  with A_{i,j}>=0 and f_i a concave function.

    This solver enables to propose two new network models for TCP Reno and
    TCP Vegas based on Low's work. These models still need to be fully
    tested though [Pedro Velho].

 SIMDAG [AL]:
  * Bug fix in SD_simulate. Now the time bound given as argument is
    used.
  * Use the new parallel task model (ptask_L07) as default.
  * Use the SURF command line configuration mechanism.
  * 0-size tasks (for synchronization) should now work.

 -- 

SimGrid (3.2) unstable; urgency=low

  OVERALL CHANGES:
   * Port to windows.
     We still experience issues on this platform, but we believe that at
     least MSG is usable.

  GRAS API BREAKAGE (for simplification purpose, sorry):
   * the gras_msgtype_by_name is not used anymore. Instead of 
       gras_msg_send(toserver, gras_msgtype_by_name("request"), &request);
     you can write (and must)
       gras_msg_send(toserver, "request", &request);
   - If you still want to pass a gras_msgtype_t to the function (to cache